--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by gitluan</title>
+  <title>Tempo restante para 2028</title>
   <link href='https://fonts.googleapis.com/css?family=Asul:400,700' rel='stylesheet'>
 <style>
 body {
